[project]
name = "squatter-tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mangano-ito", email = "mangano-ito@hatena.ne.jp" }
]
dependencies = [
    "pip>=24.3.1",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "dash>=2.18.2",
    "ipywidgets>=8.1.5",
    "nicegui>=2.9.0",
    "jupyter>=1.1.1",
    "more-itertools>=10.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
plot = "squatter_tools.plot:main"
dadb = "squatter_tools.dump_adb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/squatter_tools"]
